# Compiler

./: .clangd  CMakeLists.txt  README.md  Untitled  comp  compile.sh  main  run.sh  test.cpp  todo.txt
.cache/clangd/index/: ASTNode.h.0634B316A09C2AC7.idx  ASTNode.h.874614AC3BC5E79F.idx  ASTNode.h.8C34F90E39292B6A.idx  ASTNodeType.h.6CE9AC7DA71BC47D.idx  ASTNodeType.h.A63479EA8568A577.idx  ASTNodeType.h.E7779391245B299F.idx  assignment_operator.cpp.0323FDAA20991F8D.idx  assignment_operator.cpp.129EE5F0D12D084C.idx  assignment_operator.cpp.BEE183B16B1EA706.idx  assignment_operator.h.4C4E0B3397026D00.idx  assignment_operator.h.85910B23FEE94E7F.idx  assignment_operator.h.B84A55EFEDD19056.idx  ast.h.3F20CF5581B50943.idx  ast.h.5ABCA5D55F4A1261.idx  ast.h.A89E7E67E322C4BF.idx  binary_operator.cpp.80B40BBC3889F911.idx  binary_operator.cpp.D1BBB2FABF477E1F.idx  binary_operator.cpp.F25F4D6C743B8189.idx  binary_operator.h.AEE365A82CF090D4.idx  binary_operator.h.B278FAD40ECA3825.idx  binary_operator.h.EB03F7D453A9E109.idx  body.cpp.0F99F0A7849E61D2.idx  body.cpp.D9917D64A67C9494.idx  body.cpp.F79119907BCB713D.idx  body.h.23D9CA6533307210.idx  (+165 more)
examples/: comments.shq
src/: code.shq  compiler.hpp  main  main.cpp
src/assembly/: test  test.asm
src/backend/: codegen.cpp  codegen.h  codegen.hpp  irscope.cpp  irscope.h  llvm.hpp  scope.hpp
src/deprecated/: parser.hpp  semantics.hpp  tokenizer.hpp
src/frontend/: new_parser.hpp  new_tokenizer.hpp  parser.hpp  preprocessing.hpp  scope.cpp  scope.h  scope.hpp  semantics.hpp  tokenizer.hpp
src/includes/: ASTNodeType.h  ast.h  ast.hpp  error.hpp  new_ast.hpp  old_ast.hpp  token.hpp
src/modules/: ast.hpp  codegen.hpp  error.hpp  llvm.hpp  parser.hpp  preprocessing.hpp  scope.hpp  semantics.hpp  token.hpp  tokenizer.hpp
tests/ast/: final.shq  for.shq  struct.shq  variables.shq  while.shq
tests/llvm/: test.shq
tests/parser/: do-while.shq  final.shq  for.shq  functions.shq  if.shq  operators.shq  pointer.shq  pointers.shq  structs.shq  test.shq  variables.shq  while.shq
tests/tokenizer/: test.shq
(+93 files in other folders)
